tests/ecc-aws-226-eks_clusters_security_group_traffic_restricted/placebo-red/eks.DescribeCluster_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "cluster": {
            "name": "226_eks_cluster_red",
            "arn": "arn:aws:eks:us-east-1:111111111111:cluster/226_eks_cluster_red",
            "createdAt": {
                "__class__": "datetime",
                "year": 2021,
                "month": 12,
                "day": 2,
                "hour": 11,
                "minute": 8,
                "second": 58,
                "microsecond": 875000
            },
            "version": "1.21",
            "endpoint": "https://D4F7A0808F0D798475FF45F3C53D0282.gr7.us-east-1.eks.amazonaws.com",
            "roleArn": "arn:aws:iam::111111111111:role/eks-373-cluster-red",
            "resourcesVpcConfig": {
                "subnetIds": [
                    "subnet-0381be1af43d40a6d",
                    "subnet-0d1cb874a81dba178"
                ],
                "securityGroupIds": [
                    "sg-1234567asdfg"
                ],
                "clusterSecurityGroupId": "sg-1234567asdfg",
                "vpcId": "vpc-0a42bd855d9ac3572",
                "endpointPublicAccess": true,
                "endpointPrivateAccess": false,
                "publicAccessCidrs": [
                    "0.0.0.0/0"
                ]
            },
            "kubernetesNetworkConfig": {
                "serviceIpv4Cidr": "172.20.0.0/16"
            },
            "logging": {
                "clusterLogging": [
                    {
                        "types": [
                            "api",
                            "audit",
                            "authenticator",
                            "controllerManager",
                            "scheduler"
                        ],
                        "enabled": false
                    }
                ]
            },
            "identity": {
                "oidc": {
                    "issuer": "https://oidc.eks.us-east-1.amazonaws.com/id/D4F7A0808F0D798475FF45F3C53D0282"
                }
            },
            "status": "ACTIVE",
            "certificateAuthority": {
                "data": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1USXdNakE1TVRZek1Gb1hEVE14TVRFek1EQTVNVFl6TUZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTEtrCkZ1QTZ6S0lYUFF2TWtqdUJMQTRyUEcrVDBNaXloYTY1d3ZTRXE0d25aMWtaUHF5M0lKeGRFUHcrREVXTUZlZXYKZkw1YWpEbWxNNnhoa2hPc2JoVVhWWTZDdTQvc3F6aWhCWGx1YWMvMDlVUDNYUWNSZ1J5bFAxck8zeHdkMlhDagp3b2g [...]
            },
            "platformVersion": "eks.3",
            "tags": {
                "CustodianRule": "ecc-aws-226-eks_clusters_security_group_traffic_restricted",
                "ComplianceStatus": "Red"
            }
        }
    }
}
